k8s_deployments/traefik/traefik-midd-hstsxss.yml
# These middlewares set the Strict-Transport-Security and
# the X-XSS-Protection headers.
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: hstsxssin
  namespace: default
  labels:
    traffic-type: internal
  annotations:
    kubernetes.io/ingress.class: traefik-internal
spec:
  headers:
    stsSeconds: 31536000
    stsIncludeSubdomains: true
    stsPreload: true
    forceSTSHeader: true
    browserXssFilter: true
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: hstsxss-nosubin
  namespace: default
  labels:
    traffic-type: internal
  annotations:
    kubernetes.io/ingress.class: traefik-internal
spec:
  headers:
    stsSeconds: 31536000
    stsIncludeSubdomains: false
    stsPreload: true
    forceSTSHeader: true
    browserXssFilter: true
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: hstsxssext
  namespace: default
  labels:
    traffic-type: external  # To be detected by the external proxy
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  headers:
    stsSeconds: 31536000
    stsIncludeSubdomains: true
    stsPreload: true
    forceSTSHeader: true
    browserXssFilter: true
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: hstsxss-nosubext
  namespace: default
  labels:
    traffic-type: external  # To be detected by the external proxy
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  headers:
    stsSeconds: 31536000
    stsIncludeSubdomains: false
    stsPreload: true
    forceSTSHeader: true
    browserXssFilter: true
