k8s_deployments/traefik/traefik-midd-lan.yml
# This middleware filters IP to allow connections only from
# the home lan and the servers lan.
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: lan-whitelist
  namespace: default
spec:
  ipWhiteList:
    sourceRange:
      - 127.0.0.1/32
      - 1.2.3.4/24  # Home network
      - 1.2.3.5/24  # VPN
      - 1:2:3:4::/64
    # ipStrategy:
    #   depth: 1
