k8s_deployments/traefik/traefik-midd-security.yml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: crowdsec
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: traefik-external
  labels:
    traffic-type: external
spec:
  forwardAuth:
    address: http://crowdsec-traefik-bouncer.crowdsec.svc:8080/api/v1/forwardAuth
    trustForwardHeader: true
# ForwardAuth is used to authenticate requests using authelia
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: autheliain
  namespace: kube-system
spec:
  forwardAuth:
    address: http://authelia-svc.authelia.svc/api/authz/forward-auth
    trustForwardHeader: true
    authResponseHeaders:
      - Remote-User
      - Remote-Groups
      - Remote-Email
      - Remote-Name
# ForwardAuth is used to authenticate requests using authelia
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: autheliaext
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: traefik-external
  labels:
    traffic-type: external
spec:
  forwardAuth:
    address: http://authelia-svc.authelia.svc/api/authz/forward-auth
    trustForwardHeader: true
    authResponseHeaders:
      - Remote-User
      - Remote-Groups
      - Remote-Email
      - Remote-Name
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: modsecin
  namespace: kube-system
spec:
  plugin:
    traefik-modsecurity-plugin:
      ModSecurityUrl: http://modsecurity.crowdsec.svc
      TimeoutMillis: 1000
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: modsecext
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: traefik-external
  labels:
    traffic-type: external
spec:
  plugin:
    traefik-modsecurity-plugin:
      ModSecurityUrl: http://modsecurity.crowdsec.svc
      TimeoutMillis: 1000
