k8s_deployments/traefik/traefik-bridge.yml
# By default, the traefik ingress listens only on one IP (which I call the primary IP).
# To handle requests coming from two different lans, this bridge service is needed.
# The service ensures that requests to '1.2.3.240' (secondary IP) will reach the
# ingress container as if they were meant for the primary IP '1.3.4.5'.
# Please note that this service is transparent to the cluster, services and ingresses
# will behave as if only the primary IP is configured;
# this means that in fields such as 'field.cattle.io/publicEndpoints' only the primary
# IP will be configured!
# (1) Traffic coming to this service won't be load balanced between cluster nodes, it will
# reach service’s pod(s) that are on the same node, check https://metallb.universe.tf/usage/.
---
apiVersion: v1
kind: Service
metadata:
  annotations:
# Be aware that this ip is tied to every DNS record pointing to the ingress through the home LAN
    metallb.universe.tf/loadBalancerIPs: 1.2.3.240
  labels:
    app.kubernetes.io/instance: traefik-kube-system
    app.kubernetes.io/name: traefik
  name: traefik-bridge
  namespace: kube-system
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local  # Needed to preserve client IP, check (1) and https://metallb.universe.tf/usage/
  # The default service, for the primary IP, uses 'externalTrafficPolicy: Cluster' to ensure load balancing
  internalTrafficPolicy: Local
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: web
    port: 80
    protocol: TCP
    targetPort: web
  - name: web-udp
    port: 80
    protocol: UDP
    targetPort: web-udp
  - name: websecure
    port: 443
    protocol: TCP
    targetPort: websecure
  - name: websecure-udp
    port: 443
    protocol: UDP
    targetPort: websecure-udp
  selector:
    app.kubernetes.io/instance: traefik-kube-system
    app.kubernetes.io/name: traefik
  sessionAffinity: None
---
apiVersion: v1
kind: Service
metadata:
  annotations:
# Be aware that this ip is tied to every DNS record pointing to the ingress through the home LAN
    metallb.universe.tf/loadBalancerIPs: 1:2:3::240
  labels:
    app.kubernetes.io/instance: traefik-kube-system
    app.kubernetes.io/name: traefik
  name: traefik-bridge-v6
  namespace: kube-system
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local  # Needed to preserve client IP, check (1) and https://metallb.universe.tf/usage/
  # The default service, for the primary IP, uses 'externalTrafficPolicy: Cluster' to ensure load balancing
  internalTrafficPolicy: Local
  ipFamilies:
  - IPv6
  ipFamilyPolicy: SingleStack
  ports:
  - name: web
    port: 80
    protocol: TCP
    targetPort: web
  - name: web-udp
    port: 80
    protocol: UDP
    targetPort: web-udp
  - name: websecure
    port: 443
    protocol: TCP
    targetPort: websecure
  - name: websecure-udp
    port: 443
    protocol: UDP
    targetPort: websecure-udp
  selector:
    app.kubernetes.io/instance: traefik-kube-system
    app.kubernetes.io/name: traefik
  sessionAffinity: None
